Implementing the creation of a game What's left to do : verify user doesn't already have a game.
