# backendsqlite/src/controllers/game.js
@@ -8,7 +8,8 @@ const Messages = require('../models/messages.js');
 
 const createGame = async (req, res) => {
   const creatorUsername = req.username;
-  const { minPlayers, maxPlayers, dayDuration, nightDuration, werewolfProbability } = JSON.parse(req.body.data);
+  console.log('username', creatorUsername);
+  const { minPlayers, maxPlayers, dayDuration, nightDuration, werewolfProbability, insomniaProbability, seerProbability, infectionProbability, spritismProbability } = JSON.parse(req.body.data);
   const newGame = await Games.create({ creatorUsername, minPlayers, maxPlayers, dayDuration, nightDuration, werewolfProbability });
   // add creator as player also
   await Players.create({ username: creatorUsername, idGame: newGame.idGame });
